--- a/src/styles/carousel3d.css
+++ b/src/styles/carousel3d.css
@@ -5,7 +5,8 @@
   background: transparent;
   perspective: 1000px;
   transform-style: preserve-3d;
-  height: 500px; /* Give it a fixed height */
+  height: 700px;
+  /* Give it a fixed height */
   align-items: center;
   justify-content: center;
   cursor: grab;
@@ -15,7 +16,8 @@
   cursor: grabbing;
 }
 
-#drag-container, #spin-container {
+#drag-container,
+#spin-container {
   position: relative;
   display: flex;
   margin: auto;
@@ -33,7 +35,8 @@
   font-size: 20px;
   text-align: center;
   -webkit-box-reflect: below 10px linear-gradient(transparent, transparent, #0005);
-  background-color: transparent; /* Container is now transparent */
+  background-color: transparent;
+  /* Container is now transparent */
   user-select: none;
   cursor: pointer;
 }
@@ -54,7 +57,8 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  -webkit-backface-visibility: hidden; /* Safari */
+  -webkit-backface-visibility: hidden;
+  /* Safari */
   backface-visibility: hidden;
   display: flex;
   flex-direction: column;
@@ -81,7 +85,7 @@
 }
 
 .carousel-3d-item p {
-    color: hsl(var(--card-foreground));
+  color: hsl(var(--card-foreground));
 }
 
 #ground-3d {
@@ -90,22 +94,26 @@
   position: absolute;
   top: 100%;
   left: 50%;
-  transform: translate(-50%,-50%) rotateX(90deg);
-  background: -webkit-radial-gradient(center center, farthest-side , hsla(var(--primary) / 0.2), transparent);
+  transform: translate(-50%, -50%) rotateX(90deg);
+  background: -webkit-radial-gradient(center center, farthest-side, hsla(var(--primary) / 0.2), transparent);
 }
 
 @keyframes spin {
-  from{
+  from {
     transform: rotateY(0deg);
-  } to{
+  }
+
+  to {
     transform: rotateY(360deg);
   }
 }
 
 @keyframes spinRevert {
-  from{
+  from {
     transform: rotateY(360deg);
-  } to{
+  }
+
+  to {
     transform: rotateY(0deg);
   }
 }
