--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -557,8 +557,12 @@
   mask-image:
     linear-gradient(to bottom, black, black),
     radial-gradient(ellipse at 50% 50%, black 40%, transparent 65%),
+    radial-gradient(ellipse at 66% 66%, black 5%, transparent 40%),
+    radial-gradient(ellipse at 33% 33%, black 5%, transparent 40%),
+    radial-gradient(ellipse at 66% 33%, black 5%, transparent 40%),
+    radial-gradient(ellipse at 33% 66%, black 5%, transparent 40%),
     conic-gradient(from var(--pointer-°) at center, transparent 5%, black 15%, black 85%, transparent 95%);
-  mask-composite: subtract, add;
+  mask-composite: subtract, add, add, add, add, add;
   opacity: calc((var(--pointer-d) - var(--color-sens)) / (100 - var(--color-sens)));
   mix-blend-mode: soft-light;
 }
@@ -587,10 +591,14 @@
     inset 0 0 3px 0 hsl(var(--glow-color) / calc(var(--glow-boost) + 50%)),
     inset 0 0 6px 0 hsl(var(--glow-color) / calc(var(--glow-boost) + 40%)),
     inset 0 0 15px 0 hsl(var(--glow-color) / calc(var(--glow-boost) + 30%)),
+    inset 0 0 25px 2px hsl(var(--glow-color) / calc(var(--glow-boost) + 20%)),
+    inset 0 0 50px 2px hsl(var(--glow-color) / calc(var(--glow-boost) + 10%)),
     0 0 1px 0 hsl(var(--glow-color) / calc(var(--glow-boost) + 60%)),
     0 0 3px 0 hsl(var(--glow-color) / calc(var(--glow-boost) + 50%)),
     0 0 6px 0 hsl(var(--glow-color) / calc(var(--glow-boost) + 40%)),
-    0 0 15px 0 hsl(var(--glow-color) / calc(var(--glow-boost) + 30%));
+    0 0 15px 0 hsl(var(--glow-color) / calc(var(--glow-boost) + 30%)),
+    0 0 25px 2px hsl(var(--glow-color) / calc(var(--glow-boost) + 20%)),
+    0 0 50px 2px hsl(var(--glow-color) / calc(var(--glow-boost) + 10%));
 }
 
 .glow-card>.glow-card-inner {
